[package]
name = "iter_fixed"
version = "0.2.1"
authors = ["Albin Hedman <albin9604@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/usbalbin/iter_fixed/"
description = "Iterator of fixed length"
keywords = ["iterator", "array", "data-structure", "zip"]
categories = ["rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["nightly_features"]
nightly_features = []

[dependencies]
